--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "basic_brutus"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -10,3 +10,4 @@ regex = "1.6.0"
 base64 = "0.13.0"
 reqwest = { version = "0.11", features = ["blocking"] }
 http = "0.2.8"
+rayon = "1.5.3"
