--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ reqwest = { version = "0.11", features = ["blocking"] }
 http = "0.2.8"
 rayon = "1.5.3"
 num_cpus = "1.13.1"
+crossbeam-channel = "0.5.6"
