--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,10 @@ edition = "2021"
 [dependencies]
 regex = "1.6.0"
 base64 = "0.13.0"
-reqwest = { version = "0.11", features = ["blocking"] }
+reqwest = { version = "0.11.12", features = ["blocking", "native-tls"] }
 http = "0.2.8"
 rayon = "1.5.3"
 num_cpus = "1.13.1"
 crossbeam-channel = "0.5.6"
+ openssl-probe = "0.1.5"
+async-std = { version = "1", features = ["attributes", "tokio1"] }
