--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ num_cpus = "1.13.1"
 crossbeam-channel = "0.5.6"
 async-std = { version = "1", features = ["attributes", "tokio1"] }
 dotenv = "0.15.0"
+chrono = "0.4.22"
