--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ crossbeam-channel = "0.5.6"
 async-std = { version = "1", features = ["attributes", "tokio1"] }
 dotenv = "0.15.0"
 chrono = "0.4.22"
+colored = "2.0.0"
